﻿*******************************************************************

   Название проекта : OPOS драйвер WebKassa
   Компания         : ШТРИХ-М, Россия 
                     (495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposWebKassa_0.83.exe
  24 октября 2024 17:37
  
  [-] Изменена работа с POS принтером. POS принтер 
      захватывается только для печати документа.
	  
*******************************************************************

  OposWebKassa_0.82.exe
  16 октября 2024 18:31
  
  [-] Исправлена ошибка "List index out of bounds"
      Ошибка появляется, если сделать надбавку на позицию чека
  
*******************************************************************

  OposWebKassa_0.81.exe
  1 октября 2024 18:00
  
  [-] Исправлена ошибка запроса GetData(FPTR_GD_Z_REPORT)
  
*******************************************************************

  OposWebKassa_0.80.exe
  6 сентября 2024 18:15
  
  [-] Исправлена ошибка печати шрифтом B
  
*******************************************************************

  OposWebKassa_0.79.exe
  2 сентября 2024 16:50
  
  [-] Исправлена ошибка печати налога на чеке
  
*******************************************************************

  OposWebKassa_0.78.exe
  2 сентября 2024 10:50
  
  [+] Добавлена печать БСН/БИН в чеке и в шаблоне чека
  
*******************************************************************

  OposWebKassa_0.76.exe
  29 августа 2024 12:55
  
  [-] Исправлены ошибки печати в кодировке UTF8
  
*******************************************************************

  OposWebKassa_0.75.exe
  23 августа 2024 17:36
  
  [-] Исправлена ошибка передачи платежей в пустом чеке

*******************************************************************

  OposWebKassa_0.74.exe
  22 августа 2024 18:06
  
  [+] Сделана поддержка печати в UTF8 для принтера OA-48
  
*******************************************************************

  OposWebKassa_0.73.exe