@@ -1,2 +1,2 @@
 set delphi_version=7
-want
+want buildns
