@@ -1,2 +1,0 @@
-set delphi_version=7
-want buildns
