@@ -63,8 +63,6 @@ TestSumInCashbox=0
 
 [Tests.WebkassaAccTest.exe.TWebkassaImplTest]
 TestCashOut=0
-TestZReport=0
-TestXReport=0
 TestFiscalReceipt2=0
 TestFiscalReceipt3=0
 TestFiscalReceiptWithVAT=0
@@ -82,16 +80,19 @@ TestFiscalReceipt6=0
 TestPrintReceiptDuplicate=0
 TestFiscalReceipt7=0
 TestFiscalReceipt8=0
-TestNonFiscal2=0
 TestPrint2DBarcode=0
 TestPrintReceiptDuplicate2=0
 TestNonFiscal=0
-TestCashIn=0
 TestPrintBarcode=0
 TestFontB=0
 TestFiscalReceipt=0
-OpenClaimEnable=0
 TestCutterError=0
+TestListIndexError=0
+TestCashIn=0
+TestZReport=0
+OpenClaimEnable=0
+TestXReport=0
+TestNonFiscal2=0
 
 [Tests.WebkassaAccTest.exe.TStorePointTest]
 TestCloseDevices=1
@@ -191,7 +192,6 @@ TestSendReceipt2=0
 TestSumInCashbox=1
 
 [Tests.WebkassaAccTest.exe.TPrinterOA48Test]
-TestBitmap=0
 TestPrintRasterBMP=0
 TestReadPrinterID=0
 TestInitialize=0
@@ -238,6 +238,7 @@ TestUserCharacter=0
 TestPrintRussianFontB=0
 TestLineSpacing=0
 TestCutterError=0
+TestBitmap=0
 
 [Tests.WebkassaAccTest.exe.TPosPrinterOA48Test]
 TestCheckHealth=0
