@@ -6,6 +6,14 @@
 
 *******************************************************************
 
+  OposWebKassa_0.84.exe
+  12 ноября 2024 12:50
+  
+  [+] Добавлен параметр "Печатать QR код вместо DataMatrix" на 
+      страницу "Штрихкод" в программе настройки. 
+	  
+*******************************************************************
+
   OposWebKassa_0.83.exe
   24 октября 2024 17:37
   
